--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".ClickerRandomActivity" />
+        <activity android:name=".RandomActivity" />
+        <activity android:name=".FlagsActivity"></activity>
     </application>
 
 </manifest>
